ASSUAN_PIPE_CONNECT_FDPASSING  NEW
ASSUAN_PIPE_CONNECT_DETACHED   NEW
ASSUAN_SOCKET_SERVER_FDPASSING NEW
ASSUAN_SOCKET_SERVER_ACCEPTED  NEW
ASSUAN_SOCKET_CONNECT_FDPASSING NEW
assuan_peercred_t	       NEW
assuan_get_peercred	       CHANGED: Return assuan_peercred_t.
assuan_client_read_response    NEW
assuan_client_parse_response   NEW
assuan_fd_from_posix_fd	       NEW
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


Noteworthy changes in version 1.0.5 (2008-05-25)
------------------------------------------------

 * Minor fixes.

 * Build library for GNU/Linux as PIC.


Noteworthy changes in version 1.0.4 (2007-12-12)
------------------------------------------------

 * New socket wrapper functions to support Unix domain sockets under
   Windows.

 * New hook feature to enhance the internal I/O functions.


Noteworthy changes in version 1.0.3 (2007-08-24)
------------------------------------------------

 * New type assuan_fd_t and constant ASSUAN_INVALID_FD for better W32
   support.  It does not change the semantics under Unix.  Under W32
   all file descriptors are now guaranteed to be system handles.

 * New functions assuan_process_done and assuan_inquire_ext to support
   external event loops.

 * Changed the license of the library code back to LGPLv2.1 to support
   a bunch of GPLv2(only) software which does not allow the use of
   LGPLv3.  Note that this is only a temporary change and authors of
   GPLv2(only) software are asked to switch to GPLv3 or to add an
   exception which allow the use of LPGLv3 software.


Noteworthy changes in version 1.0.2 (2007-07-05)
------------------------------------------------

 * Changed license to LGPLv3.

 * New flag ASSUAN_CONFIDENTIAL to return the state of
   confidential logging.

 * Better support for W32.

 * Assorted bug fixed and code cleanups.


Noteworthy changes in version 1.0.1 (2006-11-22)
------------------------------------------------

 * New function: assuan_set_io_monitor.